--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about me</title>
     <link rel="stylesheet" href="styles.css">
@@ -21,7 +21,7 @@
             <li class="navlink"> <a href="index.html">HOME</a></li>
             <li class="navlink"> <a href="about.html"> ABOUT</a></li>
             <li class="navlink"> <a href="contact.html"> CONTACT</a></li>
-            <li class="navlink"> <a href="WORK"> WORK</a></li>
+            <li class="navlink"> <a href="PROJECTS"> PROJECTS</a></li>
             <li class="navlink"> <a href="SERVICES"> SERVICES</a></li>
             <li class="navlink"> <a href="SHOP"> SHOP</a></li>
         </ul>
@@ -29,9 +29,23 @@
 </header>
 
 <main class="aboutmain">
-    <h2> Get to Know Me.</h2>
+    <h2> about.</h2>
     <img class="img4" src="images/image4.jpg" alt=" photo of Kelly with cowgirl hat">
-    <p> <span>Welcome In!</span> My name is Kelly, and I'm based in Colorado. I'm a curious and creative individual who enjoys learning new things, exploring fresh ideas, and staying connected with the world around me. With a passion for creativity and visual storytelling, I specialize in graphic design that captivates and communicates. I enjoy crafting designs that blend innovation with functionality, ensuring each project not only looks stunning but also effectively delivers its message. Whether it's branding, digital media, or print, I thrive on bringing ideas to life through design. My journey as a graphic designer is fueled by curiosity, a commitment to excellence, and a drive to make a lasting impact through visual artistry. I believe that great design begins with understanding—understanding the needs of the audience, the goals of the project, and the story behind the vision. By blending creativity with strategy, I aim to create designs that not only capture attention but also leave a meaningful impression. To me, graphic design is more than visuals; it's a bridge that connects ideas to people. </p>
+    <p> <br> <span>Welcome In! My name is Kelly</span> <br>and I'm based in Colorado. I'm a curious and creative individual who loves exploring fresh ideas, learning new things, and staying connected with the world around me. With a passion for creativity and visual storytelling, I specialize in graphic design that captivates and communicates. I enjoy crafting designs that seamlessly blend creativity with usefulness, ensuring each project is not only visually stunning but also effectively delivers its intended message. Whether it's branding, digital media, or print, I thrive on bringing concepts to life through the art of design.
+<br>My journey as a graphic designer is fueled by an insatiable curiosity, a commitment to excellence, and a desire to leave a lasting impact through visual artistry. I believe that great design begins with understanding and grasping the needs of the audience, the goals of the project, and the story behind the vision. By combining creativity with strategy, I aim to create designs that not only capture attention but also leave a meaningful and lasting impression. To me, graphic design is more than just creating visuals; it is a bridge that connects ideas to people.
+<br>
+    </p>
+
+
+    <div class="button2">   
+        <a  href="contact.html" class="button_a" target="_parent"> Contact Me</a>
+        </div>
+
+    <div class="logos">
+    <img class="img10" src="images/x_logo2.png" alt=" image of x.com logo">
+    <img class="img11" src="images/insta_logo.png" alt=" image of instagram.com logo">
+    <img class="img12" src="images/threads_logo.png" alt=" image of threads.com logo">
+    </div>
    
 </main>
 
