--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="styles.css">
@@ -20,7 +20,7 @@
                 <li class="navlink"> <a href="index.html">HOME</a></li>
                 <li class="navlink"> <a href="about.html"> ABOUT</a></li>
                 <li class="navlink"> <a href="contact.html"> CONTACT</a></li>
-                <li class="navlink"> <a href="WORK"> WORK</a></li>
+                <li class="navlink"> <a href="PROJECTS"> PROJECTS</a></li>
                 <li class="navlink"> <a href="SERVICES"> SERVICES</a></li>
                 <li class="navlink"> <a href="SHOP"> SHOP</a></li>
             </ul>
@@ -42,6 +42,13 @@
 
     </form>
     </div>
+
+    <div class="logos">
+        <img class="img10" src="images/x_logo2.png" alt=" image of x.com logo">
+        <img class="img11" src="images/insta_logo.png" alt=" image of instagram.com logo">
+        <img class="img12" src="images/threads_logo.png" alt=" image of threads.com logo">
+        </div>
+
 </main>
 
 <footer> 
