--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" >
     <title>Kellythedesigner</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
                 <li class="navlink"> <a href="index.html">HOME</a></li>
                 <li class="navlink"> <a href="about.html"> ABOUT</a></li>
                 <li class="navlink"> <a href="contact.html"> CONTACT</a></li>
-                <li class="navlink"> <a href="WORK"> WORK</a></li>
+                <li class="navlink"> <a href="PROJECTS"> PROJECTS</a></li>
                 <li class="navlink"> <a href="SERVICES"> SERVICES</a></li>
                 <li class="navlink"> <a href="SHOP"> SHOP</a></li>
             </ul>  
@@ -35,15 +35,34 @@
     <main class="featured">  
         <div class = "row">
             <div class="column">
-        <img class="img1" src="images/image1.jpg" alt=" three columns of letter number sequence design" >
+        <img class="img6" src="images/image6.jpg" alt=" logo for katnappin created by Kelly " >
     </div>
     <div class="column">
-        <img class="img2" src="images/image2.jpg" alt=" created logo  for josh and john's ice cream">
+        <img class="img3" src="images/image3.jpg" alt=" poster for the font glodak created by Kelly">
     </div>
     <div class="column">
-        <img class="img3" src="images/image3.jpg" alt=" created poster for the glodak font">
+        <img class="img8" src="images/image8.png" alt=" vector design of musical artist Miguel created by Kelly">
     </div>
+    <div class="column">
+        <img class="img5" src="images/image5.jpg" alt=" kinetic visual poster that reads the void created by Kelly">
+    </div>
+    
        </div>
+       <div class = "row">
+        <div class="column">
+    <img class="img1" src="images/image1.jpg" alt=" design project created by Kelly " >
+</div>
+<div class="column">
+    <img class="img9" src="images/image9.png" alt=" banner logo created by kelly ">
+</div>
+<div class="column">
+    <img class="img2" src="images/image2.jpg" alt=" created logo  for josh and john's ice cream created by Kelly">
+</div>
+<div class="column">
+    <img class="img7" src="images/image7.jpg" alt=" abstract design poster created by Kelly ">
+</div>
+
+   </div>
 
     </main>
 
