--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@
        
         </div>
     </div>
-      <p> content about the vidoe above.</p>
+      <p> content about the video above.</p>
         <h3> Digital Artworks</h3>
 
     </main>
