--- a/services.html
+++ b/services.html
@@ -27,7 +27,7 @@
                 <li class="navlink"> <a href="contact.html"> CONTACT</a></li>
                 <li class="navlink"> <a href="projects.html"> PROJECTS</a></li>
                 <li class="navlink"> <a href="services.html"> SERVICES</a></li>
-                <li class="navlink"> <a href="SHOP"> SHOP</a></li>
+                <li class="navlink"> <a href="shop.html"> SHOP</a></li>
             </ul>  
             <ul class="navlist">
                 <li class="navlink hideOnMobile"> <a href="index.html">HOME</a></li>
@@ -35,7 +35,7 @@
                 <li class="navlink hideOnMobile"> <a href="contact.html"> CONTACT</a></li>
                 <li class="navlink hideOnMobile"> <a href="projects.html"> PROJECTS</a></li>
                 <li class="navlink hideOnMobile"> <a href="services.html"> SERVICES</a></li>
-                <li class="navlink hideOnMobile"> <a href="SHOP"> SHOP</a></li>
+                <li class="navlink hideOnMobile"> <a href="shop.html"> SHOP</a></li>
                 <li onclick=showSidebar() class="menu-button navlink"><a href="#"> <img class="menu" src="images/menu_24dp_FFDD00_FILL0_wght400_GRAD0_opsz24.png" alt=" three line in column to represent the menu"></a></li>
             </ul>  
             <div class="hamburger">
