--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
                 <li class="navlink"> <a href="contact.html"> CONTACT</a></li>
                 <li class="navlink"> <a href="projects.html"> PROJECTS</a></li>
                 <li class="navlink"> <a href="services.html"> SERVICES</a></li>
-                <li class="navlink"> <a href="shop.html"> SHOP</a></li>
+                <li class="navlink"> <a href="blog.html"> BLOG</a></li>
             </ul>  
             <ul class="navlist">
                 <li class="navlink hideOnMobile"> <a href="index.html">HOME</a></li>
@@ -33,7 +33,7 @@
                 <li class="navlink hideOnMobile"> <a href="contact.html"> CONTACT</a></li>
                 <li class="navlink hideOnMobile"> <a href="projects.html"> PROJECTS</a></li>
                 <li class="navlink hideOnMobile"> <a href="services.html"> SERVICES</a></li>
-                <li class="navlink hideOnMobile"> <a href="shop.html"> SHOP</a></li>
+                <li class="navlink hideOnMobile"> <a href="blog.html"> BLOG</a></li>
                 <li onclick=showSidebar() class="menu-button navlink"><a href="#"> <img class="menu" src="images/menu_24dp_FFDD00_FILL0_wght400_GRAD0_opsz24.png" alt=" three line in column to represent the menu"></a></li>
             </ul>  
            
@@ -41,9 +41,9 @@
 </header>
 
 <main class="contactmain">
-    <h2> Lets Work together !</h2>
+    <h2> Lets Work together!</h2>
     <div class="container">
-    <form>
+    <form action="Hello.php" method="POST">
         <h3> Contact Me Here</h3>
         <input type="text" id="firstname" placeholder=" First Name" required>
         <input type="text" id="lastname" placeholder=" Last Name" required>
