--- a/services.html
+++ b/services.html
@@ -27,7 +27,7 @@
                 <li class="navlink"> <a href="contact.html"> CONTACT</a></li>
                 <li class="navlink"> <a href="projects.html"> PROJECTS</a></li>
                 <li class="navlink"> <a href="services.html"> SERVICES</a></li>
-                <li class="navlink"> <a href="shop.html"> SHOP</a></li>
+                <li class="navlink"> <a href="blog.html"> BLOG</a></li>
             </ul>  
             <ul class="navlist">
                 <li class="navlink hideOnMobile"> <a href="index.html">HOME</a></li>
@@ -35,7 +35,7 @@
                 <li class="navlink hideOnMobile"> <a href="contact.html"> CONTACT</a></li>
                 <li class="navlink hideOnMobile"> <a href="projects.html"> PROJECTS</a></li>
                 <li class="navlink hideOnMobile"> <a href="services.html"> SERVICES</a></li>
-                <li class="navlink hideOnMobile"> <a href="shop.html"> SHOP</a></li>
+                <li class="navlink hideOnMobile"> <a href="blog.html"> BLOG</a></li>
                 <li onclick=showSidebar() class="menu-button navlink"><a href="#"> <img class="menu" src="images/menu_24dp_FFDD00_FILL0_wght400_GRAD0_opsz24.png" alt=" three line in column to represent the menu"></a></li>
             </ul>  
             <div class="hamburger">
@@ -45,3 +45,24 @@
             </div>
         </nav>
 </header>
+
+<main class= "servicesmain">
+    <h2> Services</h2>
+    <h3> Branding and Identity</h3>
+    <p> I provide comprehensive branding services that shape a strong and cohesive visual identity. From designing distinctive logos to curating typography that enhances brand recognition, I focus on elements that make an impact. My expertise extends to crafting cohesive color schemes that evoke the right emotions and reinforce brand consistency, ensuring that every aspect of a brand's presence feels intentional and meaningful.
+    <br>Beyond individual design elements, I work to create a seamless and memorable experience across both digital and print media. Whether developing visual assets, refining layouts, or integrating branding into different platforms, I ensure that every touchpoint reflects the essence of the brand. My goal is to build designs that not only look great but also communicate a clear and compelling brand story.
+        </p>
+    <h3>Illustrations</h3>
+    <p> I have expertise in both vector and raster illustration styles, allowing me to create versatile and impactful designs suited for various professional applications. Vector illustrations are ideal for crisp, scalable graphics used in branding, icons, and complex compositions, while raster illustrations bring depth and texture, making them perfect for rich, detailed artworks. My skills enable me to craft illustrations that not only stand out visually but also serve practical purposes, including poster art, digital assets, marketing materials, and other high-impact visuals.</p>
+
+    <div class="logos">
+        <img class="img10" src="images/x_logo2.png" alt=" image of x.com logo">
+        <img class="img11" src="images/insta_logo.png" alt=" image of instagram.com logo">
+        <img class="img12" src="images/threads_logo.png" alt=" image of threads.com logo">
+        </div>
+
+</main>
+<footer> 
+    <p> All rights Reserved. © 2025</p>
+</footer>
+</body>
