--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about me</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="script.js"></script>
@@ -47,7 +48,7 @@
 <main class="aboutmain">
     <h2> about.</h2>
     <img class="img4" src="images/image4.jpg" alt=" photo of Kelly with cowgirl hat">
-    <p> <br> <span>Welcome In! My name is Kelly</span> <br>and I'm based in Colorado. I'm a curious and creative individual who loves exploring fresh ideas, learning new things, and staying connected with the world around me. With a passion for creativity and visual storytelling, I specialize in graphic design that captivates and communicates. I enjoy crafting designs that seamlessly blend creativity with usefulness, ensuring each project is not only visually stunning but also effectively delivers its intended message. Whether it's branding, digital media, or print, I thrive on bringing concepts to life through the art of design.
+    <p> <span>Welcome In! My name is Kelly</span> and I'm based in Colorado. I'm a curious and creative individual who loves exploring fresh ideas, learning new things, and staying connected with the world around me. With a passion for creativity and visual storytelling, I specialize in graphic design that captivates and communicates. I enjoy crafting designs that seamlessly blend creativity with usefulness, ensuring each project is not only visually stunning but also effectively delivers its intended message. Whether it's branding, digital media, or print, I thrive on bringing concepts to life through the art of design.
 <br>My journey as a graphic designer is fueled by an insatiable curiosity, a commitment to excellence, and a desire to leave a lasting impact through visual artistry. I believe that great design begins with understanding and grasping the needs of the audience, the goals of the project, and the story behind the vision. By combining creativity with strategy, I aim to create designs that not only capture attention but also leave a meaningful and lasting impression. To me, graphic design is more than just creating visuals; it is a bridge that connects ideas to people.
 <br>
     </p>
