--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
 <main class="contactmain">
     <h2> Lets Work together!</h2>
     <div class="container">
-    <form action="Hello.php" method="POST">
+    <form method="POST" action="welcome.php">
         <h3> Contact Me Here</h3>
         <input type="text" id="firstname" placeholder=" First Name" required>
         <input type="text" id="lastname" placeholder=" Last Name" required>
