--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kellythedesigner</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="script.js"></script>
@@ -52,30 +53,30 @@
             <div class = "row">
                 <div class="column">
             <img class="img14" src="images/LogoYellowAYD.png" alt=" logo for katnappin created by Kelly " >
-            <p> AYD EMOTE:</p>
+            <p class="title"> AYD EMOTE:</p>
             <p> Emote made for a client that can be used for Twitch, Youtube, and Discord</p>
             <p> Profile emote  made with the initials of the streamer and thier desired color scheme. </p>
-            <p> TOOLS USED:</p>
+            <p class="title"> TOOLS USED:</p>
             <p> Huion Drawing Pad with Photoshop</p>
             <p> YEAR:</p>
             <p> 2020</p>
         </div>
         <div class="column">
-            <img class="img16" src="images/AngryYAK.png" alt=" poster for the font glodak created by Kelly">
-            <p> ANGRY YAK EMOTE:</p>
+            <img class="img16" src="images/AngryYAK.png" alt=" poster for the font glodak created by Kelly"> 
+            <p class="title"> ANGRY YAK EMOTE:</p>
             <p> Emote made for a client that can be used for Twitch, Youtube, and Discord</p>
             <p> Illustrated with goal to make an angry emote for client. I wanted to think outside the box and go for the a more cartoon approach using their mascot- a yak</p>
-            <p> TOOLS USED:</p>
+            <p class="title"> TOOLS USED:</p>
             <p> Huion Drawing Pad with Photoshop</p>
             <p> YEAR:</p>
             <p> 2019</p>
         </div>
         <div class="column">
             <img class="img15" src="images/HeartRhi.png" alt=" image of girl hugging a heart">
-            <p> HEART EMOTE:</p>
+            <p class="title"> HEART EMOTE:</p>
             <p> Emote made for a client that can be used for Twitch, Youtube, and Discord</p>
             <p> Created for a client that wanted a heart emote for her channel with herself featured in it as well </p>
-            <p> TOOLS USED:</p>
+            <p class="title"> TOOLS USED:</p>
             <p> Huion Drawing Pad with Photoshop</p>
             <p> YEAR:</p>
             <p> 2019</p>
@@ -87,9 +88,9 @@
         <h3 onclick="toggle1()" > Typography.</h3>
         <div class="typo" id="myTYPO" style="display: none;">
             <img class ="img13" src="images/typo_project.jpg" alt=" Alphabet made with tools">
-            <p> ABC's OF TYPOGRAPHY: </p>
+            <p class="title"> ABC's OF TYPOGRAPHY: </p>
             <p> Made for a personal project for a class in Typography</p>
-            <p> TOOLS USED:</p>
+            <p class="title"> TOOLS USED:</p>
             <p> Tools from a tool box I have on hand and Photoshop</p>
             <p> YEAR:</p>
             <p> 2024</p>
@@ -101,9 +102,9 @@
         <div class = "video1">
         <iframe  src="https://www.youtube.com/embed/kGHezfDQ2kA?si=OtylVjHG7aEv-2G4" allowfullscreen></iframe>
         </div>
-        <p> STREAM INTRODUCTION:</p>
+        <p class="title"> STREAM INTRODUCTION:</p>
             <p> Made for a personal project for a class in Motion Graphics</p>
-            <p> TOOLS USED:</p>
+            <p class="title"> TOOLS USED:</p>
             <p> Adobe After Effects and Photoshop</p>
             <p> YEAR:</p>
             <p> 2025</p>
@@ -116,9 +117,9 @@
             <img class="img18" src="images/mag2.JPG" alt=" magazine recreation ">
             <img class="img19" src="images/mag3.JPG" alt=" scans of old Rolling Stone 2010 Magazine">
             <p class="title"> MAGAZINE RECREATION :</p>
-            <p>Made for a personal project for a class in InDesign </p>
-            <p> I recreated pages from a 2010 Rolling Stone Magazine</p>
-            <p> TOOLS USED:</p>
+            <p>Made for a personal project for a class in InDesign. </p>
+            <p> I recreated pages from a 2010 Rolling Stone Magazine from scanned images.</p>
+            <p class="title"> TOOLS USED:</p>
             <p> Indesign, Photoshop, and a printer/scanner</p>
             <p> YEAR:</p>
             <p> 2025</p>
